--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,83 @@
+/* Reset */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    font-family: sans-serif;
+    padding-top: 70px;
+}
+
+.btn{
+    background-color: #1061FF;
+    color: white;
+    border: none;
+    padding: .6em 1em;
+}
+
+/* /Assets */
+
+
+/* Header */
+
+/* Nav */
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 70px;
+
+    /* flex */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .nav-left {
+    /* flex */
+    display: flex;
+    gap: 2em;
+    align-items: center;
+
+    padding-left: 1em;
+}
+
+nav ul {
+    /* flex */
+    display: flex;
+    gap: 2em;
+
+    list-style-type: none;
+}
+
+nav ul li{
+    font-size: .9em;
+}
+
+nav ul a {
+    padding: 1.6em 0;
+    text-decoration: none;
+}
+
+nav ul a:visited,
+nav ul a:focus{
+    color: black;
+}
+
+nav .nav-right {
+    /* flex */
+    display: flex;
+    gap: 2em;
+    align-items: center;
+
+    padding-right: 1em;
+}
+
+/* /Nav */
+
+/* /Header */
+
