--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,14 @@ body{
     padding: .6em 1em;
 }
 
+.container-centered{
+    max-width: 800px;
+    margin: 0 auto;
+
+    padding-top: 6em;
+    font-size: .9em;
+}
+
 /* /Assets */
 
 
@@ -121,6 +129,12 @@ header .jumbo .jumbo-container .jumbo-content .jumbo-left > *:not(.jumbo-sub-lin
     padding-bottom: 2em;
 }
 
+header .jumbo-sub-link a:visited,
+header .jumbo-sub-link a:focus{
+    color: black;
+    text-decoration: none;
+}
+
 header .jumbo .jumbo-container .jumbo-content .jumbo-left .jumbo-sub-link {
     font-size: 3.5em;
 }
@@ -133,6 +147,20 @@ header .jumbo .jumbo-container .jumbo-content .jumbo-right img{
     left: 0;
 }
 
-
 /* /Header */
+
+/* Main */
+
+main .substription-header > h2 {
+    font-size: 2em;
+    margin-bottom: 1.5em;
+}
+
+main .substription-header .fatture {
+    /* flex */
+    display: flex;
+    gap: 2em;
+}
+
+/* /Main */
 
