--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body{
     font-family: sans-serif;
-    padding-top: 70px;
+    padding-top: 1.5em;
 }
 
 .btn{
@@ -42,7 +42,6 @@ nav{
     z-index: 1;
 
     width: 100%;
-    height: 70px;
 
     /* flex */
     display: flex;
@@ -74,7 +73,7 @@ nav ul li{
 }
 
 nav ul a {
-    padding: 1.6em 0;
+    padding: 1.5em 0;
     text-decoration: none;
 }
 
@@ -209,6 +208,10 @@ main #subscription-plans {
     display: flex;
     flex-flow: column nowrap;
     gap: 1em;
+}
+
+#subscription-plans .plan .plan-content .plan-offer ul{
+    list-style-type: none;
 }
 
 #subscription-plans .plan .plan-content .plan-offer ,fa-solid {
@@ -372,7 +375,7 @@ main .companies {
 }
 
 main .companies .company-card {
-    height: 500px;
+    height: calc(100vw / 3);
     background-color: lightyellow;
     /* test */
     display: flex;
