--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ main .dropbox-business h2{
     font-size: 2.5em;
 }
 
-main .dropbox-business h3, p{
+main .dropbox-business h3, main .dropbox-business p{
     margin-bottom: 1.5em;
 }
 
@@ -495,13 +495,50 @@ main .faq-section  {
 
 main .faq-section h2{
     margin-bottom: 2em;
+    font-size: 2em;
 }
 
 main .faq-section .faq{
-    border: 1px solid black;
     width: 100%;
-    height: 50px;
+
+    display: flex;
+    justify-content: space-between;
+
+    font-size: .9em;
+    padding: 2em;
+
+    border-bottom: 1px solid lightgrey;
 }
+
+main .faq-section .faq:first-of-type{
+    border-top: 1px solid lightgrey;
+}
+
+
+main .faq-section .faq p{
+    display: none;
+}
+
+main .faq-section .faq:hover p{
+    display: block;
+
+    padding: 2em 1.5em .5em 1.5em;
+}
+
+main .faq-section .faq .faq-right .fa-angle-up{
+    display: none;
+}
+
+main .faq-section .faq:hover .fa-angle-down{
+    display: none;
+}
+main .faq-section .faq:hover .fa-angle-up{
+    display: block;
+}
+
+
+
+
 
 /* /Main */
 
