--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding-top: 1.5em;
 }
 
@@ -154,7 +154,7 @@ header .jumbo .jumbo-container .jumbo-content .jumbo-left .jumbo-sub-link {
 }
 
 header .jumbo .jumbo-container .jumbo-content .jumbo-right img{
-    max-width: 100%;
+    max-width: 110%;
 
     position: absolute;
     top: 0;
