fix: fixed color links nav

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
     padding-top: 1.5em;
@@ -103,6 +107,7 @@ nav ul a {
     padding: 1.5em 0;
     text-decoration: none;
     border: none;
+    color: #000;
 }
 
 nav ul a:visited,
